moved python script from downloads to docker_prac folder

--- a/green_taxi_pipeline.ipynb
+++ b/green_taxi_pipeline.ipynb
@@ -3,20 +3,44 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a4fa096e",
+   "id": "a60f1c2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#import necessary libraries\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "from time import time"
+    "from time import time\n",
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cebae813",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "242dcbe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if url.endswith('.csv.gz'):\n",
+    "    csv_name = 'output.csv.gz'\n",
+    "else:\n",
+    "    csv_name = 'output.csv'\n",
+    "\n",
+    "subprocess.run([\"wget\", url, \"-O\", csv_name])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0fec0325",
+   "id": "d1be3cf3",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "54681760",
+   "id": "63466732",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c466e5b5",
+   "id": "67bdae4f",
    "metadata": {
     "scrolled": true
    },
@@ -75,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e3068a6f",
+   "id": "32458b81",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fa9d7b77",
+   "id": "9701bfc7",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34391745",
+   "id": "de4b23c6",
    "metadata": {},
    "outputs": [],
    "source": []
